# pylot

./: Cargo.toml  install.sh
.github/workflows/: release.yml
npm/: install.js  package.json
site/: index.html  style.css
src/: main.rs
src/cli/: mod.rs
src/context/: mod.rs
src/services/: mod.rs
src/style/: mod.rs
src/tui/: mod.rs
