[package]
name = "pylot"
version = "0.1.0"
edition = "2021"
description = "Project context switcher — restore your full dev environment in one command"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
sysinfo = "0.33"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
